Fixes #35605 - host details tab can be too tall (#9495)

--- a/webpack/assets/javascripts/react_app/components/HostDetails/Tabs/Details/styles.css
+++ b/webpack/assets/javascripts/react_app/components/HostDetails/Tabs/Details/styles.css
@@ -1,5 +1,5 @@
 .details-tab-flex-container {
-  max-height: calc(100vh - 225px);
+  max-height: min(1000px, calc(100vh - 225px));
   width: 24rem;
   gap: 1.2rem;
 }
